// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtonAnt should render a button by default 1`] = `
<Button
  block={false}
  disabled={true}
  ghost={false}
  htmlType="button"
  id="the_id"
  loading={false}
  onClick={[Function]}
  prefixCls="ant-btn"
  readOnly={false}
>
  aha
</Button>
`;

exports[`ActionButtonAnt should render a button with children instead of a label 1`] = `
<Button
  block={false}
  disabled={false}
  ghost={false}
  htmlType="button"
  id="the_id"
  loading={false}
  onClick={[Function]}
  prefixCls="ant-btn"
  readOnly={false}
>
  FooButton
</Button>
`;

exports[`ActionFormButtonAnt should render a button by default 1`] = `
<FormItemAnt
  label={null}
  operation="bound ActionImpl"
>
  <ActionButtonAnt
    disabled={true}
    htmlType="submit"
    id="the_id"
    operation="bound ActionImpl"
    readOnly={false}
  />
</FormItemAnt>
`;
